--- a/tool/gainos-studio/ui/forms/cd_dcm.ui
+++ b/tool/gainos-studio/ui/forms/cd_dcm.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1068</width>
+    <width>1066</width>
     <height>632</height>
    </rect>
   </property>
@@ -28,7 +28,7 @@
    <property name="title">
     <string>General</string>
    </property>
-   <widget class="QCheckBox" name="checkBox">
+   <widget class="QCheckBox" name="cbxDevErrorDetection">
     <property name="geometry">
      <rect>
       <x>11</x>
@@ -46,7 +46,7 @@
      <rect>
       <x>11</x>
       <y>110</y>
-      <width>242</width>
+      <width>263</width>
       <height>27</height>
      </rect>
     </property>
@@ -59,7 +59,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="spinBox">
+      <widget class="QSpinBox" name="spbxMainFunctionPeriod">
        <property name="toolTip">
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -67,11 +67,14 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Consolas'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;in uint (ms)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
+       <property name="maximum">
+        <number>65535</number>
+       </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QCheckBox" name="checkBox_2">
+   <widget class="QCheckBox" name="cbxRespondAllRequest">
     <property name="geometry">
      <rect>
       <x>11</x>
@@ -84,7 +87,7 @@ p, li { white-space: pre-wrap; }
      <string>Respond All Request</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBox_3">
+   <widget class="QCheckBox" name="cbxVersionInfoApi">
     <property name="geometry">
      <rect>
       <x>11</x>
@@ -125,7 +128,7 @@ p, li { white-space: pre-wrap; }
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
-       <widget class="QCheckBox" name="checkBox_4">
+       <widget class="QCheckBox" name="cbxResponsePending">
         <property name="text">
          <string>Response Pending</string>
         </property>
@@ -141,7 +144,11 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBox_2"/>
+         <widget class="QSpinBox" name="spbxMaxNegativeResponse">
+          <property name="maximum">
+           <number>65535</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -155,9 +162,9 @@ p, li { white-space: pre-wrap; }
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>11</x>
+       <x>0</x>
        <y>11</y>
-       <width>641</width>
+       <width>664</width>
        <height>77</height>
       </rect>
      </property>
@@ -179,7 +186,11 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox_3"/>
+           <widget class="QSpinBox" name="spbxMaxNumberofSimultaneousPeriodictransmissions">
+            <property name="maximum">
+             <number>65535</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -197,7 +208,11 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox_4"/>
+           <widget class="QSpinBox" name="spbxPeriodicTransmissionSlow">
+            <property name="maximum">
+             <number>65535</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -220,7 +235,11 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox_7"/>
+           <widget class="QSpinBox" name="spbxPeriodicTransmissionMedium">
+            <property name="maximum">
+             <number>65535</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -238,7 +257,11 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="spinBox_5"/>
+           <widget class="QSpinBox" name="spbxPeriodicTransmissionFast">
+            <property name="maximum">
+             <number>65535</number>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -274,7 +297,11 @@ p, li { white-space: pre-wrap; }
        </widget>
       </item>
       <item>
-       <widget class="QSpinBox" name="spinBox_8"/>
+       <widget class="QSpinBox" name="spbxMaxSourcesforOneDynamicIdentifier">
+        <property name="maximum">
+         <number>65535</number>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -292,7 +319,7 @@ p, li { white-space: pre-wrap; }
    <property name="title">
     <string>GroupBox</string>
    </property>
-   <widget class="QTreeWidget" name="treeWidget">
+   <widget class="QTreeWidget" name="trDcm">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -372,7 +399,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </item>
    </widget>
-   <widget class="QTabWidget" name="tabDcm">
+   <widget class="QTabWidget" name="tblDcmCfg">
     <property name="geometry">
      <rect>
       <x>440</x>
@@ -408,7 +435,7 @@ p, li { white-space: pre-wrap; }
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="leBufferName"/>
          </item>
         </layout>
        </item>
@@ -422,7 +449,14 @@ p, li { white-space: pre-wrap; }
           </widget>
          </item>
          <item>
-          <widget class="QSpinBox" name="spinBox_6"/>
+          <widget class="QSpinBox" name="spbxBufferSize">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>65535</number>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -543,7 +577,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -589,7 +623,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -778,7 +812,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -824,7 +858,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -962,7 +996,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -1008,7 +1042,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -1067,7 +1101,7 @@ p, li { white-space: pre-wrap; }
        <attribute name="title">
         <string>General Settings</string>
        </attribute>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>20</x>
@@ -1154,7 +1188,7 @@ p, li { white-space: pre-wrap; }
        <attribute name="title">
         <string>Callbacks</string>
        </attribute>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>10</x>
@@ -1344,7 +1378,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Protocol</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1476,7 +1510,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Protocol Rx</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>21</x>
@@ -1568,7 +1602,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Protocol Tx</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>21</x>
@@ -1613,7 +1647,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Request Service</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1750,7 +1784,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -1796,7 +1830,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -1866,7 +1900,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Routine Start</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1956,7 +1990,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Routine</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -2064,7 +2098,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Security Level</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -2257,7 +2291,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -2288,7 +2322,7 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>280</x>
           <y>70</y>
-          <width>41</width>
+          <width>77</width>
           <height>62</height>
          </rect>
         </property>
@@ -2341,7 +2375,7 @@ p, li { white-space: pre-wrap; }
        </widget>
       </widget>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>21</x>
@@ -2399,7 +2433,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Session Control</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -2449,7 +2483,7 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Protocol Timing</string>
      </attribute>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -2530,28 +2564,28 @@ p, li { white-space: pre-wrap; }
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="btn1">
        <property name="text">
         <string>add</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="btn2">
        <property name="text">
         <string>add</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="btn3">
        <property name="text">
         <string>add</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="btn4">
        <property name="text">
         <string>add</string>
        </property>
